--- a/starterOnly/modal.css
+++ b/starterOnly/modal.css
@@ -4,6 +4,7 @@
   --modal-duration: 0.8s;
 }
 * {
+  -webkit-box-sizing: border-box;
   box-sizing: border-box;
   margin: 0;
   padding: 0;
@@ -11,95 +12,19 @@
 /* Landing Page */
 
 body {
-  margin: 0;
+  
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
   flex-direction: column;
-  background-image: url("background.png");
   font-family: var(--font-default);
   font-size: 18px;
-  max-width: 1300px;
+  max-width: 1440px;
   margin: 0 auto;
 }
-
-p {
-  margin-bottom: 0;
-  padding: 0.5vw;
-}
-
-img {
-  padding-right: 1rem;
-}
-
-.topnav {
-  overflow: hidden;
-  margin: 3.5%;
-}
-.header-logo {
-    float: left;
-}
-.main-navbar {
-    float: right;
-}
-.topnav a {
-  float: left;
-  display: block;
-  color: #000000;
-  text-align: center;
-  padding: 12px 12px;
-  margin: 5px;
-  text-decoration: none;
-  font-size: 20px;
-  font-family: Roboto, sans-serif;
-}
-
-.topnav a:hover {
-  background-color: #ff0000;
-  color: #ffffff;
-  border-radius: 15px;
-}
-
-.topnav a.active {
-  background-color: #ff0000;
-  color: #ffffff;
-  border-radius: 15px;
-}
-
-.topnav .icon {
-  display: none;
-}
-
-@media screen and (max-width: 768px) {
-  .topnav a {display: none;}
-  .topnav a.icon {
-    float: right;
-    display: block;
-  }
-}
-
-@media screen and (max-width: 768px) {
-  .topnav.responsive {position: relative;}
-  .topnav.responsive .icon {
-    position: absolute;
-    right: 0;
-    top: 0;
-  }
-  .topnav.responsive a {
-    float: none;
-    display: block;
-    text-align: left;
-  }
-}
-
-
-
- @media screen and (max-width: 540px) {
-  .topnav a {display: none;}
-  .topnav a.icon {
-    float: right;
-    display: block;
-    margin-top: -15px;
-  }
-} 
 
 main {
   font-size: 130%;
@@ -111,13 +36,85 @@ main {
   margin: 1px 20px 15px;
   border-radius: 2rem;
   text-align: justify;
-
-
+  
 }
 
+p {
+  margin-bottom: 0;
+  padding: 0.5vw;
+}
+
+
+
+/* barre de navigation */
+.topnav {
+  overflow: visible;
+  margin: 25px 20px 25px 30px;
+  height:60px;
+}
+.header-logo {
+  float: left;
+  margin:10px 0;
+  max-width: 190px;
+}
+.header-logo img{
+  width:100%
+}
+.main-navbar {
+  float: right;
+  position:relative;
+  z-index:10;
+  margin-top:10px;
+}
+.topnav a {
+  float: left;
+  display: block;
+  color: #000000;
+  text-align: center;
+  padding:  6px 12px;
+  text-decoration: none;
+  font-size: 20px;
+  font-family: Roboto, sans-serif;
+  
+}
+
+.topnav a:hover,
+.topnav a.active {
+  background-color: #ff0000;
+  color: #ffffff;
+  border-radius: 10px;
+}
+.topnav a:hover span,
+.topnav a.active span {
+  border-bottom: 2px solid white;
+}
+ 
+.btn-responsive {
+  display: none;
+}
+a.icon {
+  display: none;
+  color:red;
+  padding:12px;
+}
+
+#iconNavBar {
+  color:white;
+}
+.modal-submission {
+  display: none;
+  width: 464px;
+  height: 694px;
+  justify-content: space-between;
+  flex-direction: column;
+}
+
+.btn-responsive,
 .modal-btn {
   font-size: 145%;
   background: #fe142f;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   margin: auto;
   padding: 2em;
@@ -126,7 +123,8 @@ main {
   border-radius: 1rem;
   cursor: pointer;
 }
-
+.modal-btn-close {
+}
 .modal-btn:hover {
   background: #3876ac;
 }
@@ -173,7 +171,9 @@ main {
   margin: 5% auto;
   width: 100%;
   max-width: 500px;
+  -webkit-animation-name: modalopen;
   animation-name: modalopen;
+  -webkit-animation-duration: var(--modal-duration);
   animation-duration: var(--modal-duration);
   background: #232323;
   border-radius: 10px;
@@ -182,12 +182,25 @@ main {
   color: #fff;
   padding-top: 10px;
 }
-
+.modal-submission,
 .modal-body {
   padding: 15px 8%;
   margin: 15px auto;
+  align-items: center;
+  width:100%
 }
 
+#submission-msg {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  margin-top: 250px;
+  font-weight: 500;
+}
+.formData p {
+  color: red;
+  font-size: 0.8rem;
+}
 label {
   font-family: var(--font-default);
   font-size: 17px;
@@ -218,6 +231,8 @@ input {
   text-align: right;
   line-height: 0.3;
   opacity: 0;
+  -webkit-transition: 0.3s;
+  -o-transition: 0.3s;
   transition: 0.3s;
 }
 .formData[data-error-visible="true"]::after {
@@ -226,12 +241,7 @@ input {
 .formData[data-error-visible="true"] .text-control {
   border: 2px solid #e54858;
 }
-/* 
-input[data-error]::after {
-    content: attr(data-error);
-    font-size: 0.4em;
-    color: red;
-} */
+
 .checkbox-label,
 .checkbox2-label {
   position: relative;
@@ -251,6 +261,8 @@ input[data-error]::after {
   position: absolute;
   left: -30px;
   top: -1px;
+  -webkit-transition: 0.3s;
+  -o-transition: 0.3s;
   transition: 0.3s;
 }
 .checkbox-label .checkbox-icon::after,
@@ -265,7 +277,11 @@ input[data-error]::after {
   position: absolute;
   left: 50%;
   top: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
+  -webkit-transition: 0.3s;
+  -o-transition: 0.3s;
   transition: 0.3s;
   opacity: 0;
 }
@@ -292,6 +308,8 @@ input[data-error]::after {
   border: 2px solid transparent;
   border-bottom-color: #fff;
   border-left-color: #fff;
+  -webkit-transform: rotate(-55deg);
+  -ms-transform: rotate(-55deg);
   transform: rotate(-55deg);
   left: 21%;
   top: 19%;
@@ -304,6 +322,8 @@ input[data-error]::after {
   height: 32px;
   opacity: 1;
   cursor: pointer;
+  -webkit-transform: scale(0.7);
+  -ms-transform: scale(0.7);
   transform: scale(0.7);
 }
 .close:before,
@@ -316,11 +336,17 @@ input[data-error]::after {
   background-color: #fff;
 }
 .close:before {
+  -webkit-transform: rotate(45deg);
+  -ms-transform: rotate(45deg);
   transform: rotate(45deg);
 }
 .close:after {
+  -webkit-transform: rotate(-45deg);
+  -ms-transform: rotate(-45deg);
   transform: rotate(-45deg);
 }
+.modal-btn-close,
+.btn-responsive,
 .btn-submit,
 .btn-signup {
   background: #fe142f;
@@ -333,96 +359,42 @@ input[data-error]::after {
   cursor: pointer;
   border: 0;
 }
-/* custom select styles */
-.custom-select {
-  position: relative;
-  font-family: Arial;
-  font-size: 1.1rem;
-  font-weight: normal;
+.modal-submission-div {
+  display: flex;
+  flex-direction: column;
+  margin: 0 auto;
 }
-
-.custom-select select {
-  display: none;
-}
-.select-selected {
-  background-color: #fff;
-}
-
-/* Style the arrow inside the select element: */
-.select-selected:after {
-  position: absolute;
-  content: "";
-  top: 10px;
-  right: 13px;
-  width: 11px;
-  height: 11px;
-  border: 3px solid transparent;
-  border-bottom-color: #f00;
-  border-left-color: #f00;
-  transform: rotate(-48deg);
-  border-radius: 5px 0 5px 0;
-}
-
-/* Point the arrow upwards when the select box is open (active): */
-.select-selected.select-arrow-active:after {
-  transform: rotate(135deg);
-  top: 13px;
-}
-
-.select-items div,
-.select-selected {
-  color: #000;
-  padding: 11px 16px;
-  border: 1px solid transparent;
-  border-color: transparent transparent rgba(0, 0, 0, 0.1) transparent;
-  cursor: pointer;
-  border-radius: 8px;
-  height: 48px;
-}
-
-/* Style items (options): */
-.select-items {
-  position: absolute;
-  background-color: #fff;
-  top: 89%;
-  left: 0;
-  right: 0;
-  z-index: 99;
-}
-
-/* Hide the items when the select box is closed: */
-.select-hide {
+.btn-responsive {
   display: none;
 }
 
-.select-items div:hover,
-.same-as-selected {
-  background-color: rgba(0, 0, 0, 0.1);
-}
-/* custom select end */
 .text-label {
   font-weight: normal;
   font-size: 16px;
 }
 .hero-section {
-  min-height: 93vh;
   border-radius: 10px;
+  display: -ms-grid;
   display: grid;
+  -ms-grid-columns:  [12];
   grid-template-columns: repeat(12, 1fr);
   overflow: hidden;
+  -webkit-box-shadow: 0 2px 7px 2px rgba(0, 0, 0, 0.2);
   box-shadow: 0 2px 7px 2px rgba(0, 0, 0, 0.2);
   margin-bottom: 10px;
+  max-height:600px;
 }
 .hero-content {
   padding: 51px 67px;
-  grid-column: span 4;
+  -ms-grid-column-span: 5;
+  grid-column: span 5;
   background: #232323;
   color: #fff;
   position: relative;
   text-align: left;
-  min-width: 424px;
+  
 }
-.hero-content::after {
+/* .hero-content::after {
   content: "";
   width: 100%;
   height: 100%;
@@ -430,18 +402,20 @@ input[data-error]::after {
   position: absolute;
   right: -80px;
   top: 0;
-}
+} */
 .hero-content > * {
   position: relative;
   z-index: 1;
 }
 .hero-headline {
-  font-size: 6rem;
-  font-weight: normal;
+  font-size: 5.5vw;
+  font-size:max(80px);
+  font-size:min(5.5vw);
+  font-weight: 500;
   white-space: nowrap;
 }
 .hero-text {
-  width: 146%;
+  width: 180%;max-width:700px;
   font-weight: normal;
   margin-top: 57px;
   padding: 0;
@@ -455,13 +429,17 @@ input[data-error]::after {
   margin-top: 59px;
 }
 .hero-img {
-  grid-column: span 8;
+  -ms-grid-column-span: 7;
+  grid-column: span 7;
+  max-height:600px;
+ 
 }
 .hero-img img {
   width: 100%;
   height: 100%;
   display: block;
   padding: 0;
+  object-fit:cover;
 }
 .copyrights {
   color: #fe142f;
@@ -478,15 +456,32 @@ footer {
   padding-right: 2vw;
   margin: 0 20px;
 }
+
 @media screen and (max-width: 800px) {
+  body {
+    padding: 30px;
+  }
+  main{
+    margin:0;
+    padding-left:0;
+    padding-right:0;
+  }
+  .header-logo{
+    width:40%
+  }
+  .header-logo img{
+    width:100%;
+  }
   .hero-section {
     display: block;
+    -webkit-box-shadow: unset;
     box-shadow: unset;
+    max-height:unset;
   }
   .hero-content {
     background: #fff;
     color: #000;
-    padding: 20px;
+    padding: 0px;
   }
   .hero-content::after {
     content: unset;
@@ -495,31 +490,101 @@ footer {
     display: none;
   }
   .hero-headline {
-    font-size: 4.5rem;
+    width:100%;
+    font-size: 9vw;
+    margin-top:30px;
     white-space: normal;
+    text-align: center;
   }
-  .hero-text {
-    width: unset;
-    font-size: 1.5rem;
+    .hero-text {
+      width: 100%;
+      margin-top: 30px;
+      text-align:center;
+      margin-right:0;
+  }
+  .hero-img {
+    height: 100%;
+    width: 100%;
+    margin: 0;
   }
   .hero-img img {
     border-radius: 10px;
     margin-top: 40px;
+    margin-left:0px;
   }
   .hero-section > .btn-signup {
     display: block;
     margin: 32px auto 10px;
     padding: 12px 35px;
   }
+
+
   .copyrights {
-    margin-top: 50px;
+    margin-top: 30px;
     text-align: center;
+    font-size:1.3vw
+  }
+
+  .btn-responsive {
+    display: block;
+    margin: 30px auto;
+    border-radius:10px;
+    font-size: 1rem;
+    padding:10px 35px;
+  }
+  .topnav#myTopnav{
+    margin:0
+  }
+  .topnav a{
+    display:none
+  }
+  #myTopnav a.icon {
+    float: right;
+    display: block;
+    font-size:inherit
+}
+  
+.main-navbar{
+  position:absolute;
+  right:20px;
+  top:70px;
+  background-color:white;
+}
+}
+.topnav.responsive .icon {
+  
+  display:block;
+  
+  
+}
+.topnav.responsive a {
+  float: none;
+  display: block;
+  text-align: left;
+  margin:0;
+  
+  
+}
+.topnav.responsive a:hover {
+  background-color: red;
+  color: white;
+}
+
+@media screen and (max-width: 540px) {
+  .topnav a {
+    display: none;
+  }
+  .topnav a.icon {
+    float: right;
+    display: block;
+    
   }
 }
 
-@keyframes modalopen {
+@-webkit-keyframes modalopen {
   from {
     opacity: 0;
+    -webkit-transform: translateY(-150px);
     transform: translateY(-150px);
   }
   to {
@@ -527,3 +592,34 @@ footer {
   }
 }
 
+@keyframes modalopen {
+  from {
+    opacity: 0;
+    -webkit-transform: translateY(-150px);
+    transform: translateY(-150px);
+  }
+  to {
+    opacity: 1;
+  }
+}
+@-webkit-keyframes modalclose {
+  from {
+    opacity: 1;
+    -webkit-transform: translateY(0);
+    transform: translateY(0);
+  }
+  to {
+    opacity: 0;
+  }
+}
+
+@keyframes modalclose {
+  from {
+    opacity: 1;
+    -webkit-transform: translateY(0);
+    transform: translateY(0);
+  }
+  to {
+    opacity: 0;
+  }
+}
