--- a/starterOnly/modal.css
+++ b/starterOnly/modal.css
@@ -2,6 +2,7 @@
   --font-default: "DM Sans", Arial, Helvetica, sans-serif;
   --font-slab: var(--font-default);
   --modal-duration: 0.8s;
+  --close-modal-duration: 0.4s;
 }
 * {
   -webkit-box-sizing: border-box;
@@ -182,6 +183,26 @@ a.icon {
   color: #fff;
   padding-top: 10px;
 }
+.close-content {
+  margin: 5% auto;
+  width: 100%;
+  max-width: 500px;
+  background: #232323;
+  border-radius: 10px;
+  overflow: hidden;
+  position: relative;
+  color: #fff;
+  padding-top: 10px;
+  -webkit-animation-name: modalclose;
+  animation-name: modalclose;
+  -webkit-animation-duration: var(--close-modal-duration);
+  animation-duration: var(--close-modal-duration);
+  -webkit-animation-fill-mode: forwards;
+  animation-fill-mode: forwards;
+
+  
+}
+
 .modal-submission,
 .modal-body {
   padding: 15px 8%;
@@ -395,15 +416,7 @@ input {
   text-align: left;
   
 }
-/* .hero-content::after {
-  content: "";
-  width: 100%;
-  height: 100%;
-  background: #232323;
-  position: absolute;
-  right: -80px;
-  top: 0;
-} */
+
 .hero-content > * {
   position: relative;
   z-index: 1;
@@ -606,21 +619,24 @@ footer {
 @-webkit-keyframes modalclose {
   from {
     opacity: 1;
-    -webkit-transform: translateY(0);
-    transform: translateY(0);
+   
   }
   to {
     opacity: 0;
+     -webkit-transform: translateY(-150px);
+    transform: translateY(-150px);
   }
 }
 
 @keyframes modalclose {
   from {
     opacity: 1;
-    -webkit-transform: translateY(0);
-    transform: translateY(0);
+    
   }
   to {
     opacity: 0;
+    -webkit-transform: translateY(-150px);
+    transform: translateY(-150px);
+    }
   }
-}
+
